--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,14 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests"
-        }
+        },
+        "files": [
+            "src/helper.php"
+        ]
     },
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.6"
